src/objects/IPM_Project_Document_Section_Content__c.object
<CustomObject>
    <fields>
        <fullName>IPM_Expected_Change_Greenhouse__c</fullName>
        <description>to store expected change greenhouse</description>
        <label>Expected % Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Expected_Change_Sourcing__c</fullName>
        <description>to store expected change sourcing</description>
        <label>Expected % Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Expected_Change_Waste__c</fullName>
        <description>to store expected change waste</description>
        <label>Expected % Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Expected_Change_Water__c</fullName>
        <description>to store expected change water</description>
        <label>Expected % Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_GM_Action_Standards_Charter_Cmts__c</fullName>
        <label>IPM GM % Action Standards Charter Cmts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_GM_Action_Standards_Charter__c</fullName>
        <description>to store GM from financial action standard</description>
        <label>IPM GM % Action Standards Charter</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IPM_Gate_CMI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>contains gate cmi</description>
        <label>IPM Gate CMI</label>
        <referenceTo>IPM_Gate_CMI__c</referenceTo>
        <relationshipLabel>IPM Project Document Section Contents</relationshipLabel>
        <relationshipName>IPM_Project_Document_Section_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Gate_Type__c</fullName>
        <description>used for storing gate type</description>
        <label>Gate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Charter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Deployment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_IRR_Action_Standard_Charter_Cmts__c</fullName>
        <description>contains  IRR from financial action standard charter</description>
        <label>IPM IRR Action Standard Charter Cmts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_IRR_Action_Standard_Charter__c</fullName>
        <description>contains  IRR from financial action standard</description>
        <label>IPM IRR Action Standard Charter</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IPM_Inc_Val_Share_Action_Charter_Cmts__c</fullName>
        <description>used to store increment value shhare</description>
        <label>IPM Inc Val Share Action Charter Cmts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Inc_Value_Share_Action_Charter__c</fullName>
        <description>increment in value share for action</description>
        <label>IPM Inc Value Share Action Charter</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IPM_Increased_By__c</fullName>
        <description>increased by data for CUs</description>
        <label>IPM Increased By</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Incumbent_CUs__c</fullName>
        <description>Contains CRRT Section Incumbent CU&apos;s values</description>
        <label>IPM Incumbent CUs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Innov_Value_Share_Action_Charter__c</fullName>
        <description>contains innovation value share</description>
        <label>IPM Innov Value Share Action Charter</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IPM_Inov_Value_Share_Action_Charter_Cmts__c</fullName>
        <description>contains innovation value share charter</description>
        <label>IPM Inov Value Share Action Charter Cmts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_NPV_Action_Standard_Charter_Cmts__c</fullName>
        <description>contains npv from financial action standard charter</description>
        <label>IPM NPV Action Standard Charter Cmts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_NPV_Action_Standard_Charter__c</fullName>
        <description>contains npv from financial action standard charter</description>
        <label>IPM NPV Action Standard Charter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPM_New_CRRT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User Created CRRT?</description>
        <label>IPM New CRRT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_New_SKU_Greenhouse__c</fullName>
        <description>to store new SKU greenhouse</description>
        <label>New SKU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_New_SKU_Sourcing__c</fullName>
        <description>to store new sku sourcing</description>
        <label>New SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_New_SKU_Waste__c</fullName>
        <description>to store new SKU waste</description>
        <label>New SKU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_New_SKU_Water__c</fullName>
        <description>to store new SKU water</description>
        <label>New SKU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Nutrition__c</fullName>
        <description>to store nutrition</description>
        <label>Nutrition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_OTIF_HelpText_Amber__c</fullName>
        <description>Holds the value for Amber helptext</description>
        <label>IPM OTIF HelpText Amber</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_OTIF_HelpText_Green__c</fullName>
        <description>Hold the helptext for Green</description>
        <label>IPM OTIF HelpText Green</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_OTIF_HelpText_NA__c</fullName>
        <description>Holds the helptext for NA</description>
        <label>IPM OTIF HelpText NA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_OTIF_HelpText_Red__c</fullName>
        <description>Holds the help text from custom settings</description>
        <label>IPM OTIF HelpText Red</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_OTIF_Measure__c</fullName>
        <description>contains otif measure</description>
        <label>IPM OTIF Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_OTIF_Measure_isNull__c</fullName>
        <description>This field will advice if IPM_OTIF_Measure__c is null or not</description>
        <formula>IF( ISBLANK( IPM_OTIF_Measure__c ) , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will advice if  IPM OTIF Measure is null or not</inlineHelpText>
        <label>IPM_OTIF_Measure_isNull</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_OTIF_No_of_Status__c</fullName>
        <description>contains no of status</description>
        <label>IPM_OTIF_No of Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_OTIF_Question_Help_Text__c</fullName>
        <label>IPM OTIF Question Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_OTIF_Responsibility__c</fullName>
        <description>contains otif responsbility</description>
        <label>IPM OTIF Responsibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_OTIF_Sequence__c</fullName>
        <description>TO capture the OTIF questions Sequence</description>
        <label>IPM OTIF Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_OTIF_Status__c</fullName>
        <description>contains otif status</description>
        <label>IPM OTIF Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Pack_Image_1_Id__c</fullName>
        <description>to store pack image id for customer channel</description>
        <label>IPM Pack Image 1 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Pack_Image_2_Id__c</fullName>
        <description>to store pack image 2 for customer channel</description>
        <label>IPM Pack Image 2 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Pack__c</fullName>
        <description>contains value from customer channel</description>
        <label>IPM Pack</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Payback_Action_Standard_Charter_Cmts__c</fullName>
        <description>contains payback financial action standard charter</description>
        <label>IPM Payback Action Standard Charter Cmts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Payback_Action_Standard_Charter__c</fullName>
        <description>contains payback from financial action standard</description>
        <label>IPM Payback Action Standard Charter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Place_Image_1_Id__c</fullName>
        <description>to store place image 1 from customer channel</description>
        <label>IPM Place Image 1 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Place_Image_2_Id__c</fullName>
        <description>to store place image 2 from customer channel</description>
        <label>IPM Place Image 2 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Place__c</fullName>
        <description>to store place value from customer channel</description>
        <label>IPM Place</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Preposition_Image_1_Id__c</fullName>
        <description>to store preposition image 1 from customer channel</description>
        <label>IPM Preposition Image 1 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Preposition_Image_2_Id__c</fullName>
        <description>to store preposition image 2 from customer channel</description>
        <label>IPM Preposition Image 2 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Preposition__c</fullName>
        <description>to store preposition from customer channel</description>
        <label>IPM Proposition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Price_Image_1_Id__c</fullName>
        <description>to store price image 1 from customer channel</description>
        <label>IPM Price Image 1 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Price_Image_2_Id__c</fullName>
        <description>to store price image 2 from customer channel</description>
        <label>IPM Price Image 2 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Price__c</fullName>
        <description>to store price value from customer channel</description>
        <label>IPM Price</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Product_Image_1_Id__c</fullName>
        <description>to store product image 1 from customer channel</description>
        <label>IPM Product Image 1 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Product_Image_2_Id__c</fullName>
        <description>to store product image 2 from customer channel</description>
        <label>IPM Product Image 2 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Product__c</fullName>
        <description>to store product value from customer channel</description>
        <label>IPM Product</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Project_BETStatus__c</fullName>
        <formula>IF(ISBLANK(IPM_Project_Document_Section__r.IPM_Project_Document__r.IPM_Project__r.IPM_Parent_Project__c), 
IF(IPM_Project_Document_Section__r.IPM_Project_Document__r.IPM_Project__r.BETCurrentStatus__c == &apos;&apos;, &apos;No Bet&apos;, IPM_Project_Document_Section__r.IPM_Project_Document__r.IPM_Project__r.BETCurrentStatus__c), 
IF(IPM_Project_Document_Section__r.IPM_Project_Document__r.IPM_Project__r.IPM_Parent_Project__r.BETCurrentStatus__c == &apos;&apos;, &apos;No Bet&apos;, IPM_Project_Document_Section__r.IPM_Project_Document__r.IPM_Project__r.IPM_Parent_Project__r.BETCurrentStatus__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Project BETStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Document_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to project document section</description>
        <label>IPM Project Document Section</label>
        <referenceTo>IPM_Project_Document_Section__c</referenceTo>
        <relationshipLabel>IPM Project Document Section Contents</relationshipLabel>
        <relationshipName>IPM_Section_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Effect__c</fullName>
        <description>project effect from CUs</description>
        <label>IPM Project Effect</label>
        <picklist>
            <picklistValues>
                <fullName>No Effect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase in complexity by</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease in complexity by</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Promotion_Image_1_Id__c</fullName>
        <description>to store promotion image 1 from customer channel</description>
        <label>IPM Promotion Image 1 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Promotion_Image_2_Id__c</fullName>
        <description>to store promotion image 2 from customer channel</description>
        <label>IPM Promotion Image 2 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Promotion__c</fullName>
        <description>To capture the promotion for gate document Customers and Channels section</description>
        <label>IPM Promotion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Section_Id__c</fullName>
        <description>To store the ID of the related section used for re-direction</description>
        <label>IPM Section Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Section_Name__c</fullName>
        <description>To store the Name of the Related Section for OTIF</description>
        <label>IPM Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Section_Number__c</fullName>
        <description>To hold the related sequence number</description>
        <label>IPM Section Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Section_type__c</fullName>
        <description>to store section type</description>
        <label>Section Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamic Complex Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamic Static Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Parameters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Sustainale_Sourcing__c</fullName>
        <description>to store sustainale sourcing</description>
        <label>Sustainale Sourcing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Total_Cu_Count_Impact__c</fullName>
        <description>used for given the range for CU count impact</description>
        <label>IPM_Total_Cu_Count_Impact</label>
        <picklist>
            <picklistValues>
                <fullName>1-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-74</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75-149</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_gTO_Action_Standard_Charter_Cmts__c</fullName>
        <description>gto action standard charter</description>
        <label>IPM gTO Action Standard Charter Cmts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_gTO_Action_Standard_Charter__c</fullName>
        <description>contains gto from financial standard charter</description>
        <label>IPM gTO Action Standard Charter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPM_iTo_Action_Standard_Charter_Cmts__c</fullName>
        <description>contains ito from financial action standard charter</description>
        <label>IPM iTo Action Standard Charter Cmts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_iTo_Action_Standard_Charter__c</fullName>
        <description>conatins ito from financial action standard</description>
        <label>IPM iTo Action Standard Charter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_SKU__c</fullName>
        <description>to store new sku value</description>
        <label>New SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Content_Ext_Id__c</fullName>
        <description>to store section content external id</description>
        <externalId>true</externalId>
        <label>Section Content Ext Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>IPM Project Document Section Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IPM_OTIF_No_of_Status__c</columns>
        <columns>IPM_OTIF_Measure__c</columns>
        <columns>IPM_OTIF_Responsibility__c</columns>
        <columns>IPM_OTIF_Status__c</columns>
        <columns>IPM_Project_Document_Section__c</columns>
        <columns>IPM_Section_type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IPM_OTIF_Measure__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000GqFa_IPM_Project_Document_Section_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000GqFa</label>
        <queue>IPM_a7I0L000000GqFa</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000GqFk_IPM_Project_Document_Section_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000GqFk</label>
        <queue>IPM_a7I0L000000GqFk</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Gr3E_IPM_Project_Document_Section_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000Gr3E</label>
        <queue>IPM_a7I0L000000Gr3E</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Gr3U_IPM_Project_Document_Section_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000Gr3U</label>
        <queue>IPM_a7I0L000000Gr3U</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000GrZl_IPM_Project_Document_Section_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_DUMMY1</label>
        <queue>IPM_a7I0L000000GrZl</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000GrZq_IPM_Project_Document_Section_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_BIG BANG EU _EU</label>
        <queue>IPM_a7I0L000000GrZq</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000GrZv_IPM_Project_Document_Section_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_DUMMY2</label>
        <queue>IPM_a7I0L000000GrZv</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Grae_IPM_Project_Document_Section_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000Grae</label>
        <queue>IPM_a7I0L000000Grae</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Graj_IPM_Project_Document_Section_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000Graj</label>
        <queue>IPM_a7I0L000000Graj</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Grao_IPM_Project_Document_Section_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_RK CLARITY</label>
        <queue>IPM_a7I0L000000Grao</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Grat_IPM_Project_Document_Section_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_HACIENDA</label>
        <queue>IPM_a7I0L000000Grat</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Gray_IPM_Project_Document_Section_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_HELIUM 1</label>
        <queue>IPM_a7I0L000000Gray</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Grb3_IPM_Project_Document_Section_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_FESTIVAL 3</label>
        <queue>IPM_a7I0L000000Grb3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Grb8_IPM_Project_Document_Section_Content</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_SENORITA</label>
        <queue>IPM_a7I0L000000Grb8</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SecCon-{0000}</displayFormat>
        <label>Section Content Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPM Project Document Section Contents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>